Site Font: now pointing to bucket - fixes alignment issues

--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -81,7 +81,7 @@ backgroundGradient(darken)
 @font-face
   font-family Oxygen
   font-style normal
-  src url('/fonts/Oxygen.otf')
+  src url('https://s3-eu-west-1.amazonaws.com/synap-dev-assets/fonts/Oxygen.otf')
 
 body
   font-family Oxygen, "Helvetica Neue", Helvetica, Arial, sans-serif !important
@@ -164,64 +164,6 @@ body
 .navbar-brand-adjust {
   margin: -14px;
 }
-
-// Navbar search current
-.navbar-form, .main-search
-  position relative
-  .form-control
-    background-color darken(colorPrimary-300, 10)
-    width 100px
-    border-radius: 4px;
-    background-image none
-    padding 8px 24px 8px 8px
-    color colorPrimary-600 !important
-    transition width 0.2s
-    &:hover
-      background-color colorPrimary-300
-  span
-    position: absolute;
-    right: 8px;
-    top: 15px;
-    font-size: 18px;
-    cursor pointer
-  &.is-focused
-    .form-control
-      width 300px
-      background-color white
-      color black !important
-    span
-      color black
-
-.navbar-form
-  span
-    right 24px
-  .search-popdown
-    width: calc(100% - 30px);
-    top: 42px;
-    left: 15px;
-
-.search-popdown
-  text-align left
-  background: #edeff0;
-  color black
-  border-radius: 3px;
-  border: 1px solid #d6dadc;
-  border-bottom-color: #c4c9cc;
-  box-shadow: 0 1px 6px rgba(0, 0, 0, .15);
-  overflow: hidden;
-  overflow-y scroll
-  position: absolute;
-  left: 2px;
-  width: calc(100% - 2px);
-  min-height 115px
-  max-height 640px
-  z-index: 20;
-  -webkit-transform: translate3d(0, 0, 0);
-  transition width 0.2s
-  &.dual
-    width 600px
-  h5
-    margin-bottom 0
 
 @media (min-width: 768px) {
   .navbar-right {
